# lemdas

./: README.md
.github/workflows/: azure-container-webapp.yml  azure-static-web-apps-jolly-sand-0cfc72103.yml  main.yml  main_lemdasauth.yml  main_lemdasupload.yml  main_lemdaswebapi.yml  processor_main.yml  search_main.yml  upload_main.yml
file_processor/fileProcessor/: .gitignore  Dockerfile  all  main.py  parameters  pyproject.toml
file_processor/fileProcessor/database/: __init__.py  models.py
file_processor/fileProcessor/processor/: __init__.py  dm3_scan.py  scan.py  tif_scan.py
file_processor/fileProcessor/utils/: utils.py
file_processor/fileProcessor/web/: __init__.py  router.py
frontend/: .eslintrc.js  .eslintrc.json  .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.test.js  index.css  index.js
frontend/src/hooks/: useAuth.js
frontend/src/pages/: AdvancedSearchPage.js  AuthPage.js  DatasetPage.js  ErrorPage.js  FilePage.js  IndexPage.js  LoginPage.js  MyDataPage.js  ProfilePage.js  SimpleSearchPage.js
internal/: Dockerfile  go.mod  go.sum
internal/auth/: Dockerfile  main.go
internal/auth/web/: routes.go  routes_test.go
internal/pkg/apitesting/: attributeGroupTest.go  authGroupTest.go  datasetGroupTest.go  fileGroupTest.go  testing.go
internal/pkg/database/: setup.go
internal/pkg/logger/: logger.go
internal/pkg/utils/: CheckUserHasPermission.go  jwt.go  (+1 more)
internal/search/: Dockerfile  main.go
internal/upload/: Dockerfile  main.go
internal/webApi/: Dockerfile  main.go
(+205 files in other folders)
